--- a/css/base.css
+++ b/css/base.css
@@ -393,9 +393,10 @@ h1,h2,h3,h4,h5,p{
 }
 
 h1{
-    font-size: 120px;
+    font-size: 80px;
     font-weight: 600;
     letter-spacing: 30px;
+    margin: 0.5rem 0;
 }
 @media(max-width:768px){
   h1{
@@ -404,7 +405,7 @@ h1{
   }
 }
 h2{
-    font-size: 48px;
+    font-size: 40px;
     font-weight: 400;
 }
 @media(max-width:768px){
@@ -413,9 +414,10 @@ h2{
   } 
 }
 h3{
-    font-size: 40px;
+    font-size: 32px;
     font-weight: 400;
     line-height:48px;
+    margin: 20px 0;
 }
 @media(max-width:768px){
   h3{
