--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,10 @@ padding-left:20vh;
 }
 @media(max-width:768px){
     .profile-name{
-        padding-left:80px;
+        padding-left:30px;
+    }
+    .profile-job{
+        padding: 0 3vh;
     }
 }
 
@@ -164,7 +167,6 @@ padding-left:20vh;
 @media (max-width:768px){
     .profile-img{
         background-size:contain;
-        left: 100%;
     }    
 }
 
